# Academy-Course-DAT31063

./: Borrower.puml  Borrower.xmi  CMakeLists.txt  LICENSE  PythonBorrower.uml  README.md  borrower.R  borrower.owl  borrower.py  borrower.schema.json  borrower.sqlite  borrower1.sql  borrower2.sql  borrower3.sql  borrower_instances.owl  borrower_postgresql.sql  corporate_borrower.json  corporate_borrower.schema.json  hello.py  jsonschema_validate.py  mongo.py  owlready.py  private_borrower.json  private_borrower.schema.json  pyproject.toml  requirements.txt
cpp/: Borrower.cpp  Borrower.h  CMakeLists.txt  CorporateBorrower.cpp  CorporateBorrower.h  PrivateBorrower.cpp  PrivateBorrower.h  main.cpp
django_borrower/: createadmin.py  manage.py
django_borrower/django_borrower/: admin.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
