[project]
name = "academy-course-dat31063"
version = "0.1.0"
description = "Resources for Open Risk Academy Course: Class Inheritance in Data Science"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.7",
    "jsonschema>=4.25.1",
    "mongoengine>=0.29.1",
    "numpy>=2.2.6",
    "owlready2>=0.48",
]
